filter feature and ui change

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,9 @@
 html, body {
   height: 100%;
   font-family: 'Poppins', sans-serif;
+  background-color: #2A2F4F;
+  /* color:#FDE2F3; */
+  color:white;
 }
 
 body {
@@ -23,8 +26,9 @@ form {
     box-sizing: border-box;
     padding: 2rem;
     border-radius: 1rem;
-    background-color: hsl(0, 0%, 100%);
-    border: 4px solid hsl(0, 0%, 90%);
+    background-color: #FDE2F3;
+    /* border: 4px solid hsl(0, 0%, 90%); */
+    color:#2A2F4F;
     display: grid;
     gap: 2rem;
   }
@@ -43,12 +47,11 @@ select
   box-sizing: border-box;
 }
 
-input,
-select
+input
 {
   border: 2px solid #333;
   background-color: white;
-  border-radius: 0.25rem;
+  border-radius: 0.15rem;
 }
 
 li{
@@ -56,24 +59,26 @@ li{
 }
 
 input[type="text"],
-input[type="password"]
+input[type="password"],
+select
 {
   font: 1.25rem / 1.5 sans-serif;
   display: block;
   box-sizing: border-box;
   width: 100%;
   padding: 0.5rem 0.75rem;
+  outline:transparent;
 }
 
-
 input::placeholder{
-  opacity: 1; /* Firefox */
-  color: hsl(210, 2%, 18%);
+  opacity: 0.8; 
+  color: #2A2F4F;
 }
 
 label {
     display: inline-block;
-    font: bold 1.5rem sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
     margin-bottom: 0.5rem;
 }
 
@@ -82,12 +87,11 @@ button{
     border-radius: 0.25rem;
     cursor: pointer;
     padding: 0.75rem 1.25rem;
-    background-color: hsl(213, 73%, 50%);
-    color: white;
+    color:white;
+   background-color: #917FB3;
 }
 
 .header{
-    color:rgb(46, 44, 44);
     text-transform: uppercase;
     font-weight: bold;
 }
@@ -98,13 +102,13 @@ button{
 
 .form-error{
   text-align: center;
-  color:red;
+  color:#2A2F4F;
   font-size:0.75rem;
   text-transform: uppercase;
 }
 
 button:hover {
-    background-color: hsl(213, 73%, 40%);
+  background-color: #7c67a3;
 }
 
 
@@ -136,13 +140,33 @@ nav ul li{
     background-color: rgb(236, 70, 70);
 }
 
+.form-container{
+  display: grid;
+  grid-template-columns: 1fr 0.5fr;
+  align-items: center;
+}
+
 .add-todo{
     display: flex;
-    justify-content: center;
     align-items: center;
-    border:none;
     margin:0;
+    border-radius: 0.25rem;
+    margin-right: 1rem;
     padding:0;
+    background-color: white;
+}
+.add-todo input{
+  border: none;
+}
+.add-todo button{
+  width:0.75rem;
+  height:0.75rem;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding:1rem;
+  margin-right:0.5rem;
 }
 
 .todolists {
@@ -150,8 +174,7 @@ nav ul li{
 }
 
 .todolists li{
-    border: 0.1rem solid rgb(32, 31, 31);
-    padding:0 0.5rem;
+    padding:0.5rem 0.5rem;
     margin-bottom: 1rem;
     border-radius: 0.25rem;
     font-size: 1.25rem;
@@ -159,7 +182,13 @@ nav ul li{
     grid-template-columns: 0.8fr 0.1fr 0.1fr;
     gap:1rem;
     align-items: center;
-  transition: all 0.5s ease;
+    transition: all 0.5s ease;
+    background-color: white;
+    color:#2A2F4F;
+}
+.todolists li >*{
+  margin-top: 0;
+  margin-bottom: 0;
 }
 .todolists li i{
     pointer-events: none;
@@ -177,4 +206,39 @@ nav ul li{
 .fall{
   transform: translateY(8rem) rotateZ(20deg);
   opacity: 0;
+}
+
+select{
+  font-size: inherit;  
+  cursor: inherit;
+  line-height: inherit;
+}
+
+.filter-form {
+  width: 100%;
+  min-width: 15ch;
+  max-width: 30ch;
+  border: 1px solid #777;
+  border-radius: 0.25em;
+  padding: 0.25em 0.5em;
+  font-size: 1rem;
+  cursor: pointer;
+  line-height: 1.1;
+  background-color: #fff;
+  background-image: linear-gradient(to top, #f9f9f9, #fff 33%);
+  display: grid;
+  grid-template-areas: "select";
+  align-items: center;
+}
+
+.filter-form::after {
+  content: "";
+  width: 0.8em;
+  height: 0.5em;
+  background-color:  #777;
+  clip-path: polygon(100% 0%, 0 0%, 50% 100%);
+  justify-self: end;
+}
+.filter-form select, .filter-form::after{
+  grid-area: select;
 }
